# things-a-developer-should-know

./: Cargo.toml  HFT-interview-prep.md  IMPLEMENTATION_TODO.md  KEYWORDS_INDEX.md  LEARNING_TODO.md  ReadMe.md  trading-bot-risk-prep.md
algorithms/: ReadMe.md
algorithms/graph_alogrithms/: ReadMe.md
algorithms/greedy_alogorithms/: ReadMe.md
algorithms/sort_alogrithms/: ReadMe.md
algorithms/src/: ReadMe.md  main.rs
data-engineering/: Indexing.md  ReadMe.md  SQL-cheat-sheet.md  bootstrap-sql-analyse.sql
data_structures/: ReadMe.md  linked-list-vs-array-list.md
data_structures/src/: lib.rs  sliding_window.rs
design_patterns/src/: ReadMe.md
hackerrank/: ReadMe.md
hackerrank/mysql/: revising-the-select-query-2.sql  the-company.sql  weather-station-1.sql
hackerrank/src/: array_ratio.rs  comparison_sorting.rs  lib.rs  min_max_sum.rs
leetcode/median_of_two/: ReadMe.md
leetcode/string-as-numbers/: test.ts
leetcode_questions/: Cargo.toml
leetcode_questions/src/: lib.rs
low-level/: Cargo.toml  readme.md
low-level/src/: arena_allocator.rs  object_pool.rs
one_brc/: ReadMe.md
pulsar-take-home/: Cargo.toml  README.md
pulsar-take-home/src/: main.rs
rust-specifics/: control_flow.rs  variables_and_mutability.rs
rust_specifics/: Cargo.toml
rust_specifics/src/: The Rust Commandments.md  atomic.rs  borrowing_and_references.rs  box.rs  control_flow.rs  copy_vs_clone.rs  custom_types.rs  dyn_trait.rs  higher_order_funcs.rs  lib.rs  lifetimes.rs  macros.rs  (+6 more)
solana/: Cargo.toml  learning_notes.md
techniques/: ReadMe.md  circular-seating-puzzle.md
(+69 files in other folders)
