[workspace]
members = [
    "algorithms",
    "data_structures",
    "rust_specifics",
    "leetcode_questions"
, "hackerrank", "design_patterns", "solana", "low-level", "custom-macros", "one_brc"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
anchor-lang = "0.32.1"

